--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bd_card"
         android:orientation="vertical"
-        android:padding="60dp"
+        android:padding="110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -54,6 +54,7 @@
                 android:hint="@string/email"
                 android:ems="10"
                 android:autofillHints="@string/email"
+                android:maxLength="12"
                  />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,7 +73,8 @@
                 android:ems="10"
                 android:hint="@string/password"
                 android:autofillHints="@string/password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:maxLength="12"/>
 
 
         </com.google.android.material.textfield.TextInputLayout>
