--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -13,19 +13,19 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        android:layout_marginBottom="70dp">
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center">
 
-    <ImageView
+        <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="30dp"
             android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/menu"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="87dp" />
+            app:srcCompat="@drawable/menu" />
 
         <TextView
             android:id="@+id/club_aump"
@@ -37,11 +37,12 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:contentDescription="@string/amity_logo"
             android:src="@drawable/official_logo"
-             />
+            android:layout_gravity="center"
+            />
 
     </LinearLayout>
 
