--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:background="@color/white"
-    tools:context=".SplashMain">
+    tools:context=".SplashMain"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/official_logo"
-        android:layout_width="match_parent"
-        android:layout_height="457dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
         android:contentDescription="@string/amity_logo"
-        android:paddingTop="200dp"
+        android:gravity="center"
         android:src="@drawable/official_logo" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/official_logo"
-        android:layout_marginTop="64dp"
-        android:gravity="center"
-        android:text="@string/welcome_to_amiverse"
-        android:textColor="@color/navyblue"
-        android:textSize="25sp" />
-</RelativeLayout>
+</LinearLayout>
