--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     >
@@ -40,16 +40,6 @@
             />
 
             <Button
-                android:id="@+id/admin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Admin Panel"
-                android:layout_marginTop="40dp"
-                android:textAllCaps="false"
-                android:background="@drawable/bgbtn_home"
-               />
-
-            <Button
                 android:id="@+id/student"
                 android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -66,6 +56,19 @@
                 android:text="@string/guest"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/bgbtn_home" />
+
+        <TextView
+            android:id="@+id/admin"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#FF6B00"
+            android:focusable="true"
+            android:text="@string/admin_message"
+            android:layout_gravity="right"
+            android:textSize="12sp"
+            android:layout_marginTop="50dp"
+            />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
