--- a/app/src/main/res/layout/activity_quick_links.xml
+++ b/app/src/main/res/layout/activity_quick_links.xml
@@ -16,7 +16,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="30dp"
-        android:layout_marginTop="10dp"
         android:gravity="center">
 
         <ImageView
@@ -54,7 +53,10 @@
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:orientation="vertical">
+             android:orientation="vertical"
+             android:layout_gravity="center"
+             android:gravity="center"
+             android:padding="20dp">
 
              <LinearLayout
                  android:layout_width="match_parent"
