--- a/app/src/main/res/drawable/bgedittext.xml
+++ b/app/src/main/res/drawable/bgedittext.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp" />
-    <stroke android:color="#ffffff" android:width="1dp" />
-    <solid android:color="#FBFBFB" />
+    <solid android:color="#F1F1F1" />
 </shape>
